--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,9 +6,9 @@ font-size:16px;margin:0;
 padding:0}
     
 #cabecera
-{background:#33a;
+{background:rgb(170, 51, 67);
 box-shadow:0 2px 20px 0 rgba(0,0,0,.5);
-color:#fff;
+color:#74eb34;
 font-weight:700;
 margin:0;padding:.5em}
 
