--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body
-{color:#333;
+{color:#c32f2f;
 text-align:center;
 font-family:Arial;
 font-size:16px;margin:0;
@@ -8,7 +8,7 @@ padding:0}
 #cabecera
 {background:rgb(170, 51, 67);
 box-shadow:0 2px 20px 0 rgba(0,0,0,.5);
-color:#74eb34;
+color:#249667;
 font-weight:700;
 margin:0;padding:.5em}
 
